<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/app_background"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="@color/song_background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="4dp" >

            <TextView
                android:id="@+id/song_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SongStyle"
                android:text="@string/sample_song_title" />

            <TextView
                android:id="@+id/artist_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DescriptionStyle"
                android:text="@string/sample_artist_name" />

            <TextView
                android:id="@+id/album_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DescriptionStyle"
                android:text="@string/sample_album_name" />

        </LinearLayout>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/list_play_button_description"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_playback_play" />

    </RelativeLayout>
</LinearLayout>
