<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:padding="24dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:contentDescription="@string/detail_record_description"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/record_256"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp" >

        <TextView
            android:id="@+id/song"
            style="@style/SongStyle"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/artist"
            style="@style/DescriptionStyle" />

        <TextView
            android:id="@+id/album"
            style="@style/DescriptionStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/detail_previous_description"
            android:src="@drawable/ic_action_playback_prev" />

        <ImageView
            android:id="@+id/playButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/detail_play_description"
            android:src="@drawable/ic_action_playback_play" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/detail_next_description"
            android:src="@drawable/ic_action_playback_next" />

    </LinearLayout>

</LinearLayout>